finish adding feature